[gd_scene load_steps=14 format=3 uid="uid://bxqmlcmxf5p5k"]

[ext_resource type="Texture2D" uid="uid://0twtw8gmwa57" path="res://assets/Idle.png" id="1_73lbg"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_f0xuw"]
[ext_resource type="PackedScene" uid="uid://d4aiubsji5y0w" path="res://scenes/health_component.tscn" id="3_f1iw1"]
[ext_resource type="PackedScene" uid="uid://c8nuyfj6l50ju" path="res://scenes/hitbox_component.tscn" id="4_lpcpn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y6sfc"]
atlas = ExtResource("1_73lbg")
region = Rect2(0, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xadf"]
atlas = ExtResource("1_73lbg")
region = Rect2(82, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_uujae"]
atlas = ExtResource("1_73lbg")
region = Rect2(164, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvcm1"]
atlas = ExtResource("1_73lbg")
region = Rect2(246, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_y05k5"]
atlas = ExtResource("1_73lbg")
region = Rect2(328, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_6phyu"]
atlas = ExtResource("1_73lbg")
region = Rect2(410, 0, 82, 82)

[sub_resource type="SpriteFrames" id="SpriteFrames_ai57u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6sfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xadf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uujae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvcm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y05k5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6phyu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6xl8i"]
size = Vector2(14.8788, 12.6307)

[sub_resource type="CircleShape2D" id="CircleShape2D_17wcc"]
radius = 5.12942

[node name="Enemy" type="CharacterBody2D" groups=["Enemies"]]
z_index = 5
collision_layer = 2
collision_mask = 5
script = ExtResource("1_f0xuw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -20)
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_ai57u")
frame_progress = 0.917418

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 33)
scale = Vector2(15.1334, -13.8912)
shape = SubResource("RectangleShape2D_6xl8i")

[node name="HealthComponent" parent="." instance=ExtResource("3_f1iw1")]
MAX_HEALTH = 30.0

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component", "body") instance=ExtResource("4_lpcpn")]
position = Vector2(1, 2)
scale = Vector2(1.78202, 2.29863)
collision_layer = 2
collision_mask = 5
health_component = NodePath("../HealthComponent")
body = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
light_mask = 3
visibility_layer = 3
position = Vector2(-3.36697, -6.09059)
scale = Vector2(20.5734, -13.8912)
shape = SubResource("CircleShape2D_17wcc")

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="HitboxComponent" to="." method="_on_hitbox_component_body_entered"]
[connection signal="body_exited" from="HitboxComponent" to="." method="_on_hitbox_component_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
